@@ -245,7 +245,20 @@ public class CruiseControlConfig {
 
     private boolean isProjectTemplate(Element pluginElement) {
         String pluginName = pluginElement.getAttributeValue("name");
+        String pluginFrom = pluginElement.getAttributeValue("from");
         String pluginClassName = pluginElement.getAttributeValue("classname");
+        if (pluginClassName == null && pluginFrom != null) {
+            pluginClassName = rootPlugins.getPluginClassname(pluginFrom);
+            // No standard plugin
+            if (pluginClassName == null) {
+                LOG.warn("<plugin name = '" + pluginName + "' from = '" + pluginFrom 
+                       + "'> does not contain in-built element name");
+                return false;
+            }
+            // Create "standard" plugin element
+            pluginElement.setAttribute("classname", pluginClassName);
+            pluginElement.removeAttribute("from");
+        }
         if (pluginClassName == null) {
             pluginClassName = rootPlugins.getPluginClassname(pluginName);
         }
